--- a/public/locales/de/credentials.json
+++ b/public/locales/de/credentials.json
@@ -51,6 +51,14 @@
             "energy": "Energie"
         }
     },
+    "categories": {
+        "title": "Fallstudienkategorien",
+        "all": "Alle",
+        "software": "Software & IT",
+        "automotive": "Automotive / Mobilität",
+        "healthcare": "Healthcare",
+        "impact": "Social Impact / Nachhaltigkeit"
+    },
     "cta": {
         "title": "Bereit, unsere nächste Erfolgsgeschichte zu werden?",
         "subtitle": "Kontaktieren Sie uns noch heute, um zu besprechen, wie wir Ihre Datenherausforderungen in Geschäftsvorteile verwandeln können.",
