--- a/public/locales/en/credentials.json
+++ b/public/locales/en/credentials.json
@@ -1,11 +1,11 @@
 {
     "hero": {
         "title": "Our Case Studies",
-        "subtitle": "See how we've helped organizations transform their data and streamline their operations."
+        "subtitle": "See how we've helped organizations transform their data and optimize their operations."
     },
     "successStories": {
         "title": "Success Stories",
-        "subtitle": "Real results for real clients across industries and data needs.",
+        "subtitle": "Real results for real clients across industries and data requirements.",
         "viewCaseStudy": "View Case Study"
     },
     "detailedCase": {
@@ -16,7 +16,7 @@
     },
     "results": {
         "title": "Results That Matter",
-        "subtitle": "Our data services deliver measurable business impact.",
+        "subtitle": "Our data services deliver measurable business value.",
         "accuracy": {
             "number": "98%",
             "label": "Data Accuracy",
@@ -25,7 +25,7 @@
         "costReduction": {
             "number": "45%",
             "label": "Cost Reduction",
-            "description": "Clients typically see significant cost savings compared to in-house data operations."
+            "description": "Clients typically see significant cost savings compared to internal data operations."
         },
         "delivery": {
             "number": "3x",
@@ -35,11 +35,11 @@
     },
     "industries": {
         "title": "Industries We Serve",
-        "subtitle": "We work across sectors to deliver data solutions tailored to specific industry needs.",
+        "subtitle": "We work across industries to deliver data solutions tailored to specific sector needs.",
         "list": {
             "finance": "Finance",
             "healthcare": "Healthcare",
-            "ecommerce": "E-commerce",
+            "ecommerce": "E-Commerce",
             "software": "Software",
             "automotive": "Automotive",
             "manufacturing": "Manufacturing",
@@ -51,52 +51,60 @@
             "energy": "Energy"
         }
     },
+    "categories": {
+        "title": "Case Study Categories",
+        "all": "All",
+        "software": "Software & IT",
+        "automotive": "Automotive / Mobility",
+        "healthcare": "Healthcare",
+        "impact": "Social Impact / Sustainability"
+    },
     "cta": {
-        "title": "Ready to become our next success story?",
-        "subtitle": "Contact us today to discuss how we can help transform your data challenges into business advantages.",
+        "title": "Ready to Become Our Next Success Story?",
+        "subtitle": "Contact us today to discuss how we can transform your data challenges into business advantages.",
         "btnContact": "Contact Us",
         "btnServices": "View Services"
     },
     "cases": {
         "adaire": {
             "project": "Project Management Data Migration",
-            "description": "Manual data migration for a software development company transitioning to a new project management tool.",
-            "who": "Adaire is a software development company based in Namibia and serving clients across Germany and Switzerland. Their flagship outsourcing services are used by some of Europe's largest private and public organizations.",
-            "what": "Adaire was transitioning to a new project management tool and required manual data migration services to ensure accuracy and proper structuring within their new tool.",
-            "how": "Project data including owner, status, categories, label, and other fields task data was downloaded from Azure DevOps, adjusted to the correct format, then manually imported into Jira.",
-            "challenge": "Transitioning to a new project management tool.",
-            "solution": "Delivered manual data migration with accuracy checks.",
-            "outcome": "Smooth adoption with zero data loss."
+            "description": "We ensured that data was completely and correctly transferred when switching to a new tool.",
+            "who": "Adaire is a software development company based in Namibia, serving clients in Germany and Switzerland. Their outsourcing services are used by some of Europe's largest private and public organizations.",
+            "what": "Adaire was switching to a new project management tool and required manual data migration services to ensure accuracy and proper structuring in the new tool.",
+            "how": "Project data including owners, status, categories, labels, and other fields were downloaded from Azure DevOps, adapted to the correct format, and then manually imported into Jira.",
+            "challenge": "Switching to a new project management tool.",
+            "solution": "Performed manual data migration with accuracy checks.",
+            "outcome": "Smooth implementation without data loss."
         },
         "ddd": {
-            "project": "Autonomous Driving Annotation",
-            "description": "Annotation of images for an autonomous driving project.",
-            "who": "Digital Divine Data (DDD) is a specialized data annotation company focusing on AI training datasets.",
-            "what": "DDD collaborated with Label Ladder on the annotation of images for an autonomous driving project, requiring precise object detection and classification for vehicle AI systems.",
-            "how": "Our expert annotation team provided detailed labeling of road scenes, vehicles, pedestrians, and traffic infrastructure to support autonomous driving algorithm development.",
-            "challenge": "Needed to merge tools into one unified workflow.",
+            "project": "Autonomous Driving",
+            "description": "Images precisely prepared for AI systems so vehicles can reliably recognize objects.",
+            "who": "Digital Divine Data (DDD) is a specialized data annotation company focused on AI training datasets.",
+            "what": "DDD worked with Label Ladder on annotating images for an autonomous driving project that required precise object recognition and classification for vehicle AI systems.",
+            "how": "Our expert annotation team provided detailed labeling of street scenes, vehicles, pedestrians, and traffic infrastructure to support autonomous driving algorithm development.",
+            "challenge": "Merging tools into a unified workflow.",
             "solution": "Assisted with setup, integration, and testing.",
             "outcome": "Faster onboarding and improved collaboration."
         },
         "ambulanzpartner": {
             "project": "Healthcare Data Processing",
-            "description": "Data processing and annotation for healthcare applications.",
-            "who": "Ambulanzpartner provides emergency medical services and healthcare solutions.",
-            "what": "Label Ladder assisted Ambulanzpartner in processing and annotating healthcare data to improve patient care.",
-            "how": "Our team ensured high-quality annotations and data processing to meet the specific needs of healthcare applications.",
-            "challenge": "Large amounts of patient data with inconsistent records.",
+            "description": "Patient data cleaned and structured to enable better care.",
+            "who": "Ambulanzpartner provides medical emergency services and healthcare solutions.",
+            "what": "Label Ladder supported Ambulanzpartner in processing and annotating healthcare data to improve patient care.",
+            "how": "Our team ensured high-quality annotations and data processing to meet the specific requirements of healthcare applications.",
+            "challenge": "Large volumes of patient data with inconsistent records.",
             "solution": "Cleaned, validated, and standardized datasets.",
             "outcome": "Reliable reporting and better decision-making."
         },
         "impactTank": {
-            "project": "Data Pipeline Setup",
-            "description": "Designed and implemented data pipeline for a wildlife conservation project.",
+            "project": "Environmental Protection",
+            "description": "Data pipeline built for wildlife monitoring so environmental impacts can be measured in real-time.",
             "who": "Impact Tank is a Namibian-Swiss impact venture builder focused on social impact through data-driven solutions and community development in Africa.",
-            "what": "Impact Tank required a robust data pipeline to support their wildlife conservation project, enabling efficient data collection, processing, and analysis for environmental impact monitoring.",
-            "how": "Label Ladder's team designed and implemented a comprehensive data pipeline architecture for wildlife conservation data, including automated data ingestion, processing workflows, and analytics capabilities.",
+            "what": "Impact Tank needed a robust data pipeline to support their wildlife conservation project, enabling efficient data collection, processing, and analysis for environmental impact monitoring.",
+            "how": "Label Ladder's team designed and implemented a comprehensive data pipeline architecture for wildlife conservation data, including automated data ingestion, processing workflows, and analysis capabilities.",
             "challenge": "Need for scalable data infrastructure to support wildlife conservation efforts and impact measurement.",
-            "solution": "Implemented automated data pipeline with real-time processing and analytics capabilities.",
-            "outcome": "Enhanced conservation monitoring and data-driven decision making for community impact projects."
+            "solution": "Implemented automated data pipeline with real-time processing and analysis capabilities.",
+            "outcome": "Improved conservation monitoring and data-driven decision-making for community impact projects."
         }
     }
 }
