--- a/public/locales/fr/credentials.json
+++ b/public/locales/fr/credentials.json
@@ -1,11 +1,11 @@
 {
     "hero": {
         "title": "Nos études de cas",
-        "subtitle": "Découvrez comment nous avons aidé les organisations à transformer leurs données et à rationaliser leurs opérations."
+        "subtitle": "Découvrez comment nous avons aidé des organisations à transformer leurs données et à optimiser leurs opérations."
     },
     "successStories": {
         "title": "Histoires de réussite",
-        "subtitle": "Des résultats réels pour de vrais clients dans tous les secteurs et besoins en données.",
+        "subtitle": "Des résultats réels pour de vrais clients à travers différents secteurs et besoins en données.",
         "viewCaseStudy": "Voir l'étude de cas"
     },
     "detailedCase": {
@@ -16,30 +16,30 @@
     },
     "results": {
         "title": "Des résultats qui comptent",
-        "subtitle": "Nos services de données offrent un impact commercial mesurable.",
+        "subtitle": "Nos services de données génèrent une valeur commerciale mesurable.",
         "accuracy": {
             "number": "98%",
             "label": "Précision des données",
-            "description": "Notre processus de contrôle qualité garantit une précision quasi parfaite des données dans tous les projets."
+            "description": "Notre processus de contrôle qualité garantit une précision des données quasi parfaite sur tous les projets."
         },
         "costReduction": {
             "number": "45%",
             "label": "Réduction des coûts",
-            "description": "Les clients constatent généralement des économies importantes par rapport aux opérations de données internes."
+            "description": "Les clients constatent généralement des économies significatives par rapport aux opérations de données internes."
         },
         "delivery": {
             "number": "3x",
             "label": "Livraison plus rapide",
-            "description": "Nos équipes spécialisées livrent des résultats jusqu'à trois fois plus rapidement que les méthodes traditionnelles."
+            "description": "Nos équipes spécialisées fournissent des résultats jusqu'à trois fois plus rapidement que les méthodes traditionnelles."
         }
     },
     "industries": {
         "title": "Secteurs que nous servons",
-        "subtitle": "Nous travaillons dans tous les secteurs pour fournir des solutions de données adaptées aux besoins spécifiques de l'industrie.",
+        "subtitle": "Nous travaillons dans tous les secteurs pour fournir des solutions de données adaptées aux besoins spécifiques de chaque secteur.",
         "list": {
             "finance": "Finance",
             "healthcare": "Santé",
-            "ecommerce": "E-commerce",
+            "ecommerce": "E-Commerce",
             "software": "Logiciel",
             "automotive": "Automobile",
             "manufacturing": "Fabrication",
@@ -51,51 +51,59 @@
             "energy": "Énergie"
         }
     },
+    "categories": {
+        "title": "Catégories d'études de cas",
+        "all": "Tous",
+        "software": "Logiciels et informatique",
+        "automotive": "Automobile / Mobilité",
+        "healthcare": "Santé",
+        "impact": "Impact social / Durabilité"
+    },
     "cta": {
-        "title": "Prêt à devenir notre prochaine success story ?",
-        "subtitle": "Contactez-nous aujourd'hui pour discuter de la façon dont nous pouvons transformer vos défis de données en avantages commerciaux.",
+        "title": "Prêt à devenir notre prochaine réussite ?",
+        "subtitle": "Contactez-nous dès aujourd'hui pour discuter de la façon dont nous pouvons transformer vos défis de données en avantages commerciaux.",
         "btnContact": "Contactez-nous",
         "btnServices": "Voir les services"
     },
     "cases": {
         "adaire": {
             "project": "Migration de données de gestion de projet",
-            "description": "Migration manuelle de données pour une entreprise de développement logiciel passant à un nouvel outil de gestion de projet.",
-            "who": "Adaire est une entreprise de développement logiciel basée en Namibie et servant des clients en Allemagne et en Suisse. Leurs services d'externalisation phares sont utilisés par certaines des plus grandes organisations privées et publiques d'Europe.",
-            "what": "Adaire passait à un nouvel outil de gestion de projet et nécessitait des services de migration manuelle de données pour garantir l'exactitude et la structuration appropriée dans leur nouvel outil.",
-            "how": "Les données du projet, y compris le propriétaire, le statut, les catégories, l'étiquette et d'autres champs, ont été téléchargées depuis Azure DevOps, ajustées au format correct, puis importées manuellement dans Jira.",
-            "challenge": "Transition vers un nouvel outil de gestion de projet.",
-            "solution": "Migration manuelle de données avec vérifications de précision.",
-            "outcome": "Adoption en douceur sans perte de données."
+            "description": "Nous avons veillé à ce que les données soient complètement et correctement transférées lors du passage à un nouvel outil.",
+            "who": "Adaire est une entreprise de développement de logiciels basée en Namibie, au service de clients en Allemagne et en Suisse. Leurs services d'externalisation sont utilisés par certaines des plus grandes organisations privées et publiques d'Europe.",
+            "what": "Adaire passait à un nouvel outil de gestion de projet et nécessitait des services de migration manuelle de données pour garantir la précision et la bonne structuration dans le nouvel outil.",
+            "how": "Les données du projet, y compris les propriétaires, le statut, les catégories, les étiquettes et d'autres champs ont été téléchargées depuis Azure DevOps, adaptées au format correct, puis importées manuellement dans Jira.",
+            "challenge": "Passage à un nouvel outil de gestion de projet.",
+            "solution": "Migration manuelle des données effectuée avec vérifications de précision.",
+            "outcome": "Mise en œuvre fluide sans perte de données."
         },
         "ddd": {
-            "project": "Annotation pour conduite autonome",
-            "description": "Annotation d'images pour un projet de conduite autonome.",
-            "who": "Digital Divine Data (DDD) est une entreprise spécialisée dans l'annotation de données axée sur les ensembles de données d'entraînement IA.",
-            "what": "DDD a collaboré avec Label Ladder sur l'annotation d'images pour un projet de conduite autonome, nécessitant une détection et une classification d'objets précises pour les systèmes d'IA de véhicules.",
-            "how": "Notre équipe d'annotation experte a fourni un étiquetage détaillé des scènes routières, des véhicules, des piétons et des infrastructures de circulation pour soutenir le développement d'algorithmes de conduite autonome.",
-            "challenge": "Fusion des outils en un flux de travail unifié.",
-            "solution": "Assistance pour la configuration, l'intégration et les tests.",
+            "project": "Conduite autonome",
+            "description": "Images préparées avec précision pour les systèmes d'IA afin que les véhicules puissent reconnaître les objets de manière fiable.",
+            "who": "Digital Divine Data (DDD) est une entreprise spécialisée dans l'annotation de données axée sur les ensembles de données d'entraînement pour l'IA.",
+            "what": "DDD a travaillé avec Label Ladder sur l'annotation d'images pour un projet de conduite autonome nécessitant une reconnaissance et une classification précises des objets pour les systèmes d'IA des véhicules.",
+            "how": "Notre équipe d'annotation experte a fourni un étiquetage détaillé des scènes de rue, des véhicules, des piétons et des infrastructures de circulation pour soutenir le développement d'algorithmes de conduite autonome.",
+            "challenge": "Fusion d'outils dans un flux de travail unifié.",
+            "solution": "Assistance lors de la configuration, de l'intégration et des tests.",
             "outcome": "Intégration plus rapide et collaboration améliorée."
         },
         "ambulanzpartner": {
-            "project": "Traitement de données de santé",
-            "description": "Traitement et annotation de données pour applications de santé.",
+            "project": "Traitement des données de santé",
+            "description": "Données des patients nettoyées et structurées pour permettre de meilleurs soins.",
             "who": "Ambulanzpartner fournit des services médicaux d'urgence et des solutions de santé.",
-            "what": "Label Ladder a aidé Ambulanzpartner dans le traitement et l'annotation de données de santé pour améliorer les soins aux patients.",
-            "how": "Notre équipe a assuré des annotations de haute qualité et un traitement de données pour répondre aux besoins spécifiques des applications de santé.",
-            "challenge": "Grandes quantités de données de patients avec des dossiers incohérents.",
-            "solution": "Nettoyage, validation et standardisation des ensembles de données.",
-            "outcome": "Reporting fiable et meilleure prise de décision."
+            "what": "Label Ladder a soutenu Ambulanzpartner dans le traitement et l'annotation de données de santé pour améliorer les soins aux patients.",
+            "how": "Notre équipe a assuré des annotations de haute qualité et un traitement des données pour répondre aux exigences spécifiques des applications de santé.",
+            "challenge": "Grands volumes de données de patients avec des enregistrements incohérents.",
+            "solution": "Ensembles de données nettoyés, validés et standardisés.",
+            "outcome": "Rapports fiables et meilleure prise de décision."
         },
         "impactTank": {
-            "project": "Configuration de pipeline de données",
-            "description": "Conception et mise en œuvre d'un pipeline de données pour un projet de conservation de la faune.",
-            "who": "Impact Tank est un créateur de ventures d'impact namibien-suisse axé sur l'impact social par des solutions basées sur les données et le développement communautaire en Afrique.",
-            "what": "Impact Tank avait besoin d'un pipeline de données robuste pour soutenir son projet de conservation de la faune, permettant une collecte, un traitement et une analyse de données efficaces pour le suivi de l'impact environnemental.",
-            "how": "L'équipe de Label Ladder a conçu et mis en œuvre une architecture de pipeline de données complète pour les données de conservation de la faune, y compris l'ingestion automatisée de données, les flux de travail de traitement et les capacités d'analyse.",
+            "project": "Protection de l'environnement",
+            "description": "Pipeline de données construit pour la surveillance de la faune afin que les impacts environnementaux puissent être mesurés en temps réel.",
+            "who": "Impact Tank est un bâtisseur de ventures à impact namibien-suisse axé sur l'impact social par le biais de solutions basées sur les données et du développement communautaire en Afrique.",
+            "what": "Impact Tank avait besoin d'un pipeline de données robuste pour soutenir son projet de conservation de la faune, permettant une collecte, un traitement et une analyse efficaces des données pour la surveillance de l'impact environnemental.",
+            "how": "L'équipe de Label Ladder a conçu et mis en œuvre une architecture complète de pipeline de données pour les données de conservation de la faune, y compris l'ingestion automatisée de données, les flux de travail de traitement et les capacités d'analyse.",
             "challenge": "Besoin d'une infrastructure de données évolutive pour soutenir les efforts de conservation de la faune et la mesure de l'impact.",
-            "solution": "Pipeline de données automatisé mis en œuvre avec traitement en temps réel et capacités d'analyse.",
+            "solution": "Pipeline de données automatisé mis en œuvre avec des capacités de traitement et d'analyse en temps réel.",
             "outcome": "Surveillance améliorée de la conservation et prise de décision basée sur les données pour les projets d'impact communautaire."
         }
     }
